2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/common/medium.py:
	* flumotion/worker/worker.py:
	  rename run_bundled_proc to runFunction and move it to the
	  worker's medium, since we only ever want workers to do this for us.

2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/config.py:
	  make wrapper functions to read an int and a string, so that
	  we get a ConfigError if the values in the config are empty
	* flumotion/manager/main.py:
	  if there is a config error, print a nice warning instead of
	  a traceback

2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/managers/default/planet.xml:
	* flumotion.spec.in:
	* flumotion/common/config.py:
	* flumotion/manager/main.py:
	  add a <certificate> option to the <manager> section in config
	  file formats, and document it in sample config and spec file
	  Closes #246

2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/main.py:
	  on a config parsing error after daemonizing, only log the error
	  and SystemError, but not exit.  Fixes #310

2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/main.py:
	  print a nice error when we can't read the first (manager) config
	  file correctly
	  if we set the manager name based on path, make sure the path is
	  under a managers/ dir

2006-01-25  Zaheer Abbas Merali <zaheermerali at gmail dot com>

	* flumotion/components/encoders/vorbis/vorbis010.py: Fix
	regression from gst 0.8 so that it respects the channels parameter
	passed from the config. Fixes #316. Reviewed by Andy Wingo.

2006-01-25  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/consumers/httpstreamer/http.py
	(MultifdSinkStreamer._checkUpdate): Update the UI state
	unconditionally every 10 seconds.

2006-01-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/errors.py: