@@ -1,3 +1,9 @@
+2006-01-26  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/common/log.py:
+	  don't debug tracebacks from pb.Error, since they specifically
+	  get handled on the other side of a pb connection
+
 2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/admin/admin.py:
